--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,12 +1,14 @@
 @use "sass:color";
 
-$font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-  "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-  "Segoe UI Symbol";
-$font-family-serif: "Georgia", "Times New Roman", serif;
+$fontf-serif:  "Times New Roman","Georgia", serif;
 
-$uoc-corporate: #000078;
-$uoc-masterbrand: #73edff;
-$uoc-bg: color.scale($uoc-masterbrand, $lightness: 70%);
+$mqMinWidth: 1000px;
+$menuWidth: 300px;
+$menuHeight: 140px;
 
-$mqMinWidth: 420px;
+$font-size: 20px;
+
+$c-white: #fff;
+$c-blue1: #59b9ff;
+$c-blue2: #0094ff;
+$c-black: #000;
